--- a/_pages/author-sherlock.html
+++ b/_pages/author-sherlock.html
@@ -16,7 +16,7 @@ permalink: "/author-sherlock.html"
                 <img alt="{{ site.authors.sherlock.name }}" src="{{site.baseurl}}/{{ site.authors.sherlock.avatar }}" class="rounded-circle" height="100" width="100">
             </div>
         </div>
-        <h4 class="font-weight-bold spanborder"><span>Posts by {{page.title}}</span></h4>
+        <h4 class="font-weight-bold spanborder"><span> {{page.title}} 的文章</span></h4>
             {% assign posts = site.posts | where:"author","sherlock" %}
             {% for post in posts %}
             {% include main-loop-card.html %}
