--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
 
     <meta name="description" content="每個人都會新增一個資料夾" />
-    <link rel="icon" href="https://www.addnewfolder.com/assets/images/ICO.png" type="image/png" />
+    <link rel="icon" href="https://www.addnewfolder.com/assets/images/ico.png" type="image/png" />
     <link rel="canonical" href="https://www.addnewfolder.com/" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     
