--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
             <span class="underline h3"><span>❍ 夏洛克</span></span>
         </h1>
 
-        <p class="h5 mt-3">嗨，我是夏洛克，熱愛科技、商業與產品，並透過寫作，嘗試挖掘事物背後的本質。 </p>
-        <p class="h5 mt-3">我也經營一份電子報，每週會寄出一封信，分享科技動態、商業趨勢與新創觀察，歡迎加入。 </p>
+        <p class="h5 mt-3">嗨，我是夏洛克，AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA。 </p>
+        <p class="h5 mt-3">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB。 </p>
 
 
     <a href="/newsletter" class="btn btn-primary">訂閱《新增資料夾》電子報 →</a>
@@ -382,8 +382,8 @@
   <path data-name="layer1" fill="none" stroke="#202020" stroke-miterlimit="10"
   stroke-width="2" d="M62 62H2" stroke-linejoin="round" stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">科技・商業・新創</h4>
-                <p class="op-75 text-medium">在高速變動的科技世界，找到永恆不變的商業本質</p>
+                <h4 class="grid-item__title mb-1">XXXXXXX</h4>
+                <p class="op-75 text-medium">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>
             </a>
 
             <a href="/design" class="grid-item shadow-lg text-center">
@@ -395,8 +395,8 @@
   fill="none" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
   stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">行銷・產品・電商</h4>
-                <p class="op-75 text-medium">結合 10 年的新創產品開發與行銷經驗，分享實務面對的挑戰與解法</p>
+                <h4 class="grid-item__title mb-1">SAAAAAAAAAAAAAAAAAAAAAA</h4>
+                <p class="op-75 text-medium">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>
             </a>
 
             <a href="/life" class="grid-item shadow-lg text-center">
@@ -414,8 +414,8 @@
   fill="none" stroke="#202020" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
   stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">個人・身心・成長</h4>
-                <p class="op-75 text-medium">我個人在生活中實踐的秘訣，以及對於身心、健康和成長的認識。</p>
+                <h4 class="grid-item__title mb-1">SSSSSSSSSSSSSSSSSSSS</h4>
+                <p class="op-75 text-medium">GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG</p>
             </a>
         </div>
 
@@ -442,13 +442,13 @@
 <div class="post-card-image-wrapper post-media " data-url="" data-id="66a92a409b6008049c35cbed">
 
     <div class="post-card-image-link post-card-image-thumbnail">
-        <a href="/blog/jensen-mark-meta-siggraph-2024/" title="Meta 為什麼選擇開源 AI？雷朋眼鏡與下一代的 Llama 4｜SIGGRAPH 2024 黃仁勳 x 馬克祖克柏">
+        <a href="/blog/jensen-mark-meta-siggraph-2024/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui">
             <picture>
                 <source media="(min-width: 770px)" srcset="/content/images/size/w240/2024/07/cover.jpg 1x, /content/images/size/w540h540/2024/07/cover.jpg 2x" type="image/jpeg" />
                 <source media="(max-width: 769px)" srcset="/content/images/size/w490/2024/07/cover.jpg 1x, /content/images/size/w980/2024/07/cover.jpg 2x" type="image/jpeg" />
                 <img class="post-card-image post-image lazyload"
                     src="/content/images/size/w980/2024/07/cover.jpg"
-                    alt="Meta 為什麼選擇開源 AI？雷朋眼鏡與下一代的 Llama 4｜SIGGRAPH 2024 黃仁勳 x 馬克祖克柏"
+                    alt="ioioioefwioioioioiojioijoji"
                     data-id="66a92a409b6008049c35cbed"
                      />
             </picture>
@@ -473,14 +473,14 @@
 
                 </div>
 
-                <h2 class="post-card-title h4"><a href="/blog/jensen-mark-meta-siggraph-2024/" title="Meta 為什麼選擇開源 AI？雷朋眼鏡與下一代的 Llama 4｜SIGGRAPH 2024 黃仁勳 x 馬克祖克柏">Meta 為什麼選擇開源 AI？雷朋眼鏡與下一代的 Llama 4｜SIGGRAPH 2024 黃仁勳 x 馬克祖克柏</a></h2>
+                <h2 class="post-card-title h4"><a href="/blog/jensen-mark-meta-siggraph-2024/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui">uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</a></h2>
             </header>
         </div>
 
     </div>
 
             <div class="post-card-excerpt text-medium">
-                <p>在 SIGGRAPH 2024 上，黃仁勳邀請 Zuckerberg 對談 AI 趨勢。整體有點像是迷你 Meta 發表會，並有許多好笑的橋段。</p>
+                <p>uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</p>
             </div>
 
 </article>
@@ -495,13 +495,13 @@
 <div class="post-card-image-wrapper post-media " data-url="" data-id="669676d69b6008049c35ca3c">
 
     <div class="post-card-image-link post-card-image-thumbnail">
-        <a href="/blog/global-socia-media-report-2024/" title="台灣人平均一天用社群多久？全球螢幕使用時間最少的是哪一個國家？使用者更愛抖音（TikTok）還是 Instagram？">
+        <a href="/blog/global-socia-media-report-2024/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui？">
             <picture>
                 <source media="(min-width: 770px)" srcset="/content/images/size/w240/2024/07/04_Average-Socia-Media-Screen-Time-by-Country-1.png 1x, /content/images/size/w540h540/2024/07/04_Average-Socia-Media-Screen-Time-by-Country-1.png 2x" type="image/jpeg" />
                 <source media="(max-width: 769px)" srcset="/content/images/size/w490/2024/07/04_Average-Socia-Media-Screen-Time-by-Country-1.png 1x, /content/images/size/w980/2024/07/04_Average-Socia-Media-Screen-Time-by-Country-1.png 2x" type="image/jpeg" />
                 <img class="post-card-image post-image lazyload"
                     src="/content/images/size/w980/2024/07/04_Average-Socia-Media-Screen-Time-by-Country-1.png"
-                    alt="台灣人平均一天用社群多久？全球螢幕使用時間最少的是哪一個國家？使用者更愛抖音（TikTok）還是 Instagram？"
+                    alt="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui"
                     data-id="669676d69b6008049c35ca3c"
                      />
             </picture>
@@ -526,14 +526,14 @@
 
                 </div>
 
-                <h2 class="post-card-title h4"><a href="/blog/global-socia-media-report-2024/" title="台灣人平均一天用社群多久？全球螢幕使用時間最少的是哪一個國家？使用者更愛抖音（TikTok）還是 Instagram？">台灣人平均一天用社群多久？全球螢幕使用時間最少的是哪一個國家？使用者更愛抖音（TikTok）還是 Instagram？</a></h2>
+                <h2 class="post-card-title h4"><a href="/blog/global-socia-media-report-2024/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui">uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</a></h2>
             </header>
         </div>
 
     </div>
 
             <div class="post-card-excerpt text-medium">
-                <p>因為開發 Clarymind，我找了全球網路與社群使用報告，從資料中發現了許多有趣的事。比如，你認為目前大眾最喜愛的社群媒體是哪一個呢？</p>
+                <p>uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</p>
             </div>
 
 </article>
@@ -548,13 +548,13 @@
 <div class="post-card-image-wrapper post-media " data-url="" data-id="6669aaae9b6008049c35c896">
 
     <div class="post-card-image-link post-card-image-thumbnail">
-        <a href="/blog/apple-intelligence/" title="【WWDC 2024】Apple Intelligence：只有蘋果做得到的事，與 AI Device 的序幕">
+        <a href="/blog/apple-intelligence/" title="【uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui">
             <picture>
                 <source media="(min-width: 770px)" srcset="/content/images/size/w240/2024/06/apple-intelligence-fi.webp 1x, /content/images/size/w540h540/2024/06/apple-intelligence-fi.webp 2x" type="image/jpeg" />
                 <source media="(max-width: 769px)" srcset="/content/images/size/w490/2024/06/apple-intelligence-fi.webp 1x, /content/images/size/w980/2024/06/apple-intelligence-fi.webp 2x" type="image/jpeg" />
                 <img class="post-card-image post-image lazyload"
                     src="/content/images/size/w980/2024/06/apple-intelligence-fi.webp"
-                    alt="【WWDC 2024】Apple Intelligence：只有蘋果做得到的事，與 AI Device 的序幕"
+                    alt="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui"
                     data-id="6669aaae9b6008049c35c896"
                      />
             </picture>
@@ -579,14 +579,14 @@
 
                 </div>
 
-                <h2 class="post-card-title h4"><a href="/blog/apple-intelligence/" title="【WWDC 2024】Apple Intelligence：只有蘋果做得到的事，與 AI Device 的序幕">【WWDC 2024】Apple Intelligence：只有蘋果做得到的事，與 AI Device 的序幕</a></h2>
+                <h2 class="post-card-title h4"><a href="/blog/apple-intelligence/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui">uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</a></h2>
             </header>
         </div>
 
     </div>
 
             <div class="post-card-excerpt text-medium">
-                <p>2024 年的 WWDC，蘋果發表了 Apple Intelligence，讓人驚艷。這是因為有別於其他巨頭，蘋果充分展現了「只有蘋果做得到的事」。</p>
+                <p>uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</p>
             </div>
 
 </article>
@@ -601,13 +601,13 @@
 <div class="post-card-image-wrapper post-media " data-url="" data-id="66536db19b6008049c35c823">
 
     <div class="post-card-image-link post-card-image-thumbnail">
-        <a href="/blog/consumer-ai-openai-apple/" title="OpenAI 連串信任崩毀事件，以及為什麼蘋果最有機會，搶佔下一代 AI 消費性市場？">
+        <a href="/blog/consumer-ai-openai-apple/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui？">
             <picture>
                 <source media="(min-width: 770px)" srcset="/content/images/size/w240/2024/05/scarlett-johansson-openai.jpg 1x, /content/images/size/w540h540/2024/05/scarlett-johansson-openai.jpg 2x" type="image/jpeg" />
                 <source media="(max-width: 769px)" srcset="/content/images/size/w490/2024/05/scarlett-johansson-openai.jpg 1x, /content/images/size/w980/2024/05/scarlett-johansson-openai.jpg 2x" type="image/jpeg" />
                 <img class="post-card-image post-image lazyload"
                     src="/content/images/size/w980/2024/05/scarlett-johansson-openai.jpg"
-                    alt="OpenAI 連串信任崩毀事件，以及為什麼蘋果最有機會，搶佔下一代 AI 消費性市場？"
+                    alt="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui"
                     data-id="66536db19b6008049c35c823"
                      />
             </picture>
@@ -632,14 +632,14 @@
 
                 </div>
 
-                <h2 class="post-card-title h4"><a href="/blog/consumer-ai-openai-apple/" title="OpenAI 連串信任崩毀事件，以及為什麼蘋果最有機會，搶佔下一代 AI 消費性市場？">OpenAI 連串信任崩毀事件，以及為什麼蘋果最有機會，搶佔下一代 AI 消費性市場？</a></h2>
+                <h2 class="post-card-title h4"><a href="/blog/consumer-ai-openai-apple/" title="uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui">uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui</a></h2>
             </header>
         </div>
 
     </div>
 
             <div class="post-card-excerpt text-medium">
-                <p>「資料」與「信任」，互為矛盾的 AI 產品兩大要件。OpenAI 搞砸了，但蘋果似乎兩者兼備。</p>
+                <p>「uhuihuiuiuihuihuihuhuiuhihuiuhiuihuiui。</p>
             </div>
 
 </article>
@@ -670,15 +670,12 @@
 
             <div class="about-desc p-0 bg-none">
                 <h3 class="mb-2"><span>關於夏洛克</span></h3>
-                <p>上市公司 20 年經歷，擔任軟體工程師、產品設計與行銷經理，UX用戶體驗設計，數據分析師...因此累積前端、iOS、產品設計、UI/UX、社群行銷、廣告投手、平面設計⋯⋯等跨領域能力。以下是一些里程碑：</p>
+                <p>上市公司 20 年經歷，擔任軟體工程師、產品設計與行銷經理，UX用戶體驗設計，數據分析師...：</p>
 <ul>
-<li>主導軟體研發，產品遍及亞洲、美洲、歐洲</li>
-<li>打造穩健的行銷漏斗，帶入每年 1000 萬營收</li>
-<li>拿下國際性產品設計獎 Good Design Award</li>
-<li>於誠品規劃為期半年的櫥窗設計</li>
-<li>策劃高品質社群內容行銷，數十篇貼文獲得 1000+ 心情與 100+ 分享</li>
+<li>ddd</li>
+<li>ddd</li>
 </ul>
-<p>此外，也出版詩集《偽神的密林》，經營迷因文學帳號。畢業於台大電機系。</p>
+<p>dewdewdewdedw</p>
 
                 
 
@@ -692,14 +689,14 @@
                 <div class="inner wide bg-softaccent siskin-newsletter-box mt-4 br-s">
 
     <div class="mb-4 text-center inner-title">
-            <div class="h5 text-accent ls-1 mb-1">每週一篇科技商業觀察</div>
+            <div class="h5 text-accent ls-1 mb-1">dsfsdfsdf</div>
             <h3>訂閱《新增資料夾》電子報</h3>
     </div>
 
     <div class="siskin-newsletter-box__content inner">
 
         <div class="siskin-newsletter-box__text">
-        <p>每週我會寄送一封電子信，分享科技動態、商業趨勢與新創觀察。期望能與讀者一起，在高速變動的科技世界裡，找尋永恆不變的核心本質。</p>
+        <p>sedfdsfdsfsdfsdfsdf。</p>
         </div>
 
 
@@ -898,8 +895,8 @@
                 data-sizes="auto" />
         </picture>
         <div class="subscribe-popup-form">
-            <div class="h3 subscribe-popup-title mb-2">每週科技商業觀察</div>
-            <p>訂閱更多科技動態、商業趨勢與新創觀察，一起在高速變動的科技世界裡，找尋永恆不變的核心本質。</p>
+            <div class="h3 subscribe-popup-title mb-2">dddd</div>
+            <p>ddwqdwqdwqd</p>
             <div class="subscribe-popup-form-sender">
                 <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb"></div>
                 <div style="text-align: left" class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb"></div>
