--- a/index.html
+++ b/index.html
@@ -670,15 +670,15 @@
 
             <div class="about-desc p-0 bg-none">
                 <h3 class="mb-2"><span>關於夏洛克</span></h3>
-                <p>上市公司 20 年經歷，擔任軟體工程師、產品設計與行銷經理，UX用戶體驗設計，數據分析師...因此累積前端、iOS、產品設計、UI/UX、社群行銷、廣告投手、平面設計⋯⋯等跨領域能力。以下是一些里程碑：</p>
+                <p>上市公司 20 年經歷，擔任軟體工程師、產品設計與行銷經理，UX用戶體驗設計，數據分析師，SEO優化，AI應用...因此累積前端、iOS、產品設計、UI/UX、行銷等跨領域能力。以下是一些里程碑：</p>
 <ul>
-<li>主導軟體研發，產品遍及亞洲、美洲、歐洲</li>
-<li>打造穩健的行銷漏斗，帶入每年 1000 萬營收</li>
-<li>拿下國際性產品設計獎 Good Design Award</li>
-<li>於誠品規劃為期半年的櫥窗設計</li>
-<li>策劃高品質社群內容行銷，數十篇貼文獲得 1000+ 心情與 100+ 分享</li>
+<li>策畫訂單系統架構</li>
+<li>POS軟體開發</li>
+<li>OTT平台產品設計</li>
+<li>OTT平台數據分析</li>
+<li>OTT平台AI應用</li>
 </ul>
-<p>此外，也出版詩集《偽神的密林》，經營迷因文學帳號。畢業於台大電機系。</p>
+<p>此外，也致力於知識文章。</p>
 
                 
 
