--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@700&text=夏洛克" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/assets/built/screen.css?v=0816a11d65" />
+    <link rel="stylesheet" type="text/css" href="/assets/built/screen.css?v=99cc610185" />
 
     <script>
         var site_url = 'https://www.addnewfolder.com',
@@ -90,8 +90,8 @@
     <link rel="alternate" type="application/rss+xml" title="新增資料夾｜夏洛克" href="https://www.addnewfolder.com/blog/rss/" />
     
     <script defer src="/public/sodo-search.min.js" data-key="13c933df5b30c97498119a1672" data-styles="/public/main.css" data-sodo-search="https://www.addnewfolder.com/" crossorigin="anonymous"></script>
-    <script defer src="/public/cards.min.js?v=0816a11d65"></script>
-    <link rel="stylesheet" type="text/css" href="/public/cards.min.css?v=0816a11d65">
+    <script defer src="/public/cards.min.js?v=99cc610185"></script>
+    <link rel="stylesheet" type="text/css" href="/public/cards.min.css?v=99cc610185">
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -120,8 +120,8 @@
                 <div class="siskin-head-menu">
                     <ul class="nav">
     <li class="nav-ke-ji-yu-shang-ye"><a href="https://www.addnewfolder.com/tech/">科技與商業</a></li>
-    <li class="nav-xing-xiao-yu-chan-pin"><a href="https://www.addnewfolder.com/ecommerce/">行銷與產品</a></li>
-    <li class="nav-xue-xi-yu-cheng-chang"><a href="https://www.addnewfolder.com/life/">學習與成長</a></li>
+    <li class="nav-xing-xiao-yu-chan-pin"><a href="https://www.addnewfolder.com/ecommerce/">產品大小事</a></li>
+    <li class="nav-xue-xi-yu-cheng-chang"><a href="https://www.addnewfolder.com/life/">學習與生活</a></li>
     <li class="nav-guan-yu-wo"><a href="https://www.addnewfolder.com/about/">關於我</a></li>
     <li class="nav-sou-xun nav-current"><a href="#/search">搜尋</a></li>
 </ul>
@@ -382,7 +382,7 @@
   <path data-name="layer1" fill="none" stroke="#202020" stroke-miterlimit="10"
   stroke-width="2" d="M62 62H2" stroke-linejoin="round" stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">科技・商業・新創</h4>
+                <h4 class="grid-item__title mb-1">科技・金融・AI</h4>
                 <p class="op-75 text-medium">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
             </a>
 
@@ -395,7 +395,7 @@
   fill="none" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
   stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">行銷・產品・電商</h4>
+                <h4 class="grid-item__title mb-1">產品・管理・行銷</h4>
                 <p class="op-75 text-medium">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
             </a>
 
@@ -414,7 +414,7 @@
   fill="none" stroke="#202020" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
   stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">個人・身心・成長</h4>
+                <h4 class="grid-item__title mb-1">生活・旅遊・成長</h4>
                 <p class="op-75 text-medium">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA。</p>
             </a>
         </div>
@@ -659,9 +659,9 @@
 
             <div class="about-image p-0 bg-none">
                 <picture>
-                    <source srcset="/assets/img/lanscape.jpg?v=0816a11d65" type="image/jpeg" />
+                    <source srcset="/assets/img/lanscape.jpg?v=99cc610185" type="image/jpeg" />
                     <img class="lazyload br-m"
-                        src="/assets/img/lanscape.jpg?v=0816a11d65"
+                        src="/assets/img/lanscape.jpg?v=99cc610185"
                         alt=關於夏洛克
                         width="400"
                         data-sizes="auto" />
@@ -861,7 +861,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="/assets/built/main-min.js?v=0816a11d65"></script>
+    <script src="/assets/built/main-min.js?v=99cc610185"></script>
 
     <script>
         (function (s, e, n, d, er) {
@@ -890,9 +890,9 @@
     <div class="subscribe-popup-background"></div>
     <div class="subscribe-popup-content">
         <picture>
-            <source srcset="/assets/img/yuji-newsletter-illustration-800.jpg?v=0816a11d65" type="image/jpeg" />
+            <source srcset="/assets/img/yuji-newsletter-illustration-800.jpg?v=99cc610185" type="image/jpeg" />
             <img class="lazyload"
-                src="/assets/img/yuji-newsletter-illustration-800.jpg?v=0816a11d65"
+                src="/assets/img/yuji-newsletter-illustration-800.jpg?v=99cc610185"
                 alt="訂閱《新增資料夾》電子報"
                 width="400"
                 data-sizes="auto" />
