--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
   <path data-name="layer1" fill="none" stroke="#202020" stroke-miterlimit="10"
   stroke-width="2" d="M62 62H2" stroke-linejoin="round" stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">科技・金融・AI</h4>
-                <p class="op-75 text-medium">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <h4 class="grid-item__title mb-1">科技，商業，社會</h4>
+                <p class="op-75 text-medium">在瞬息萬變的科技與金融浪潮中，洞悉社會脈動，把握不變的核心價值</p>
             </a>
 
             <a href="/design" class="grid-item shadow-lg text-center">
@@ -395,8 +395,8 @@
   fill="none" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
   stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">產品・管理・行銷</h4>
-                <p class="op-75 text-medium">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <h4 class="grid-item__title mb-1">產品・管理・營運</h4>
+                <p class="op-75 text-medium">從上架到營運，全方位解析產品成長的每一步</p>
             </a>
 
             <a href="/life" class="grid-item shadow-lg text-center">
@@ -414,8 +414,8 @@
   fill="none" stroke="#202020" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
   stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">生活・旅遊・成長</h4>
-                <p class="op-75 text-medium">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA。</p>
+                <h4 class="grid-item__title mb-1">成長・讀書・日常</h4>
+                <p class="op-75 text-medium">個人成長與紀錄生活點滴</p>
             </a>
         </div>
 
