--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
   <path data-name="layer1" fill="none" stroke="#202020" stroke-miterlimit="10"
   stroke-width="2" d="M62 62H2" stroke-linejoin="round" stroke-linecap="round"></path>
 </svg></span>
-                <h4 class="grid-item__title mb-1">科技，商業，社會</h4>
+                <h4 class="grid-item__title mb-1">科技・商業・社會</h4>
                 <p class="op-75 text-medium">在瞬息萬變的科技與金融浪潮中，洞悉社會脈動，把握不變的核心價值</p>
             </a>
 
@@ -692,14 +692,14 @@
                 <div class="inner wide bg-softaccent siskin-newsletter-box mt-4 br-s">
 
     <div class="mb-4 text-center inner-title">
-            <div class="h5 text-accent ls-1 mb-1">AAAAAAAAAAAAAAAAAAAAAAAAAAAAA</div>
+            <div class="h5 text-accent ls-1 mb-1">不定期發布科技商業觀察</div>
             <h3>訂閱《新增資料夾》電子報</h3>
     </div>
 
     <div class="siskin-newsletter-box__content inner">
 
         <div class="siskin-newsletter-box__text">
-        <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+        <p>不定期會寄送一封電子信，分享科技動態、商業趨勢觀察。</p>
         </div>
 
 
