--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
             <span class="underline h3"><span>❍ 夏洛克</span></span>
         </h1>
 
-        <p class="h5 mt-3">嗨，我是夏洛克，AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </p>
-        <p class="h5 mt-3">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </p>
+        <p class="h5 mt-3">嗨，我是夏洛克，對科技、商業和產品有著無限的熱情，喜歡透過寫作來探討那些隱藏在事物背後的道理。</p>
+        <p class="h5 mt-3">我每週還會經營一份電子報，分享最新的科技動態、商業趨勢，還有我對新創世界的觀察，歡迎你來一起交流討論！ </p>
 
 
     <a href="/newsletter" class="btn btn-primary">訂閱《新增資料夾》電子報 →</a>
@@ -670,7 +670,7 @@
 
             <div class="about-desc p-0 bg-none">
                 <h3 class="mb-2"><span>關於夏洛克</span></h3>
-                <p>上市公司 20 年經歷，擔任軟體工程師、產品設計與行銷經理，UX用戶體驗設計，數據分析師，SEO優化，AI應用...因此累積前端、iOS、產品設計、UI/UX、行銷等跨領域能力。以下是一些里程碑：</p>
+                <p>上市公司 20 年經歷，擔任軟體工程師、產品設計與行銷，UX用戶體驗設計，數據分析師，SEO優化，AI應用...因此累積前端、iOS、產品設計、UI/UX、行銷等跨領域能力。以下是一些里程碑：</p>
 <ul>
 <li>策畫訂單系統架構</li>
 <li>POS軟體開發</li>
@@ -898,8 +898,8 @@
                 data-sizes="auto" />
         </picture>
         <div class="subscribe-popup-form">
-            <div class="h3 subscribe-popup-title mb-2">每週科技商業觀察</div>
-            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+            <div class="h3 subscribe-popup-title mb-2">不定期發布科技商業觀察</div>
+            <p>不定期會寄送一封電子信，分享科技動態、商業趨勢觀察。</p>
             <div class="subscribe-popup-form-sender">
                 <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb"></div>
                 
