--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         </h1>
 
         <p class="h5 mt-3">嗨，我是夏洛克，對科技、商業和產品有著無限的熱情，喜歡透過寫作來探討那些隱藏在事物背後的道理。</p>
-        <p class="h5 mt-3">我每週還會經營一份電子報，分享最新的科技動態、商業趨勢，還有我對新創世界的觀察，歡迎你來一起交流討論！ </p>
+        <p class="h5 mt-3">你也可以訂閱我的電子報，我會分享最新的科技動態、商業趨勢，還有我對社會的觀察，歡迎一起交流討論！ </p>
 
 
     <a href="/newsletter" class="btn btn-primary">訂閱《新增資料夾》電子報 →</a>
