--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
     })(window,document,'script','dataLayer','GTM-W7V9X27F');</script>
     <!-- End Google Tag Manager -->
 
+    <script>
+        (function (s, e, n, d, er) {
+          s['Sender'] = er;
+          s[er] = s[er] || function () {
+            (s[er].q = s[er].q || []).push(arguments)
+          }, s[er].l = 1 * new Date();
+          var a = e.createElement(n),
+              m = e.getElementsByTagName(n)[0];
+          a.async = 1;
+          a.src = d;
+          m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
+        sender('e31274e8b44964')
+      </script>
 </head>
 
 <body class="home-template">
@@ -863,20 +877,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/assets/built/main-min.js?v=99cc610185"></script>
 
-    <script>
-        (function (s, e, n, d, er) {
-          s['Sender'] = er;
-          s[er] = s[er] || function () {
-            (s[er].q = s[er].q || []).push(arguments)
-          }, s[er].l = 1 * new Date();
-          var a = e.createElement(n),
-              m = e.getElementsByTagName(n)[0];
-          a.async = 1;
-          a.src = d;
-          m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
-        sender('e31274e8b44964')
-      </script>
+
 
     <div id="subscribe-floating-button" class="">
     <span><i><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-plus" width="22" height="22" viewBox="0 0 22 22" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -901,7 +902,10 @@
             <div class="h3 subscribe-popup-title mb-2">不定期發布科技商業觀察</div>
             <p>不定期會寄送一封電子信，分享科技動態、商業趨勢觀察。</p>
             <div class="subscribe-popup-form-sender">
-                <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb"></div>
+                <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb">
+                    <div style="display: inline-block; position: relative;">                        
+                    </div>
+                </div>
                 
 
             </div>
