--- a/index.html
+++ b/index.html
@@ -902,10 +902,7 @@
             <div class="h3 subscribe-popup-title mb-2">不定期發布科技商業觀察</div>
             <p>不定期會寄送一封電子信，分享科技動態、商業趨勢觀察。</p>
             <div class="subscribe-popup-form-sender">
-                <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb">
-                    <div style="display: inline-block; position: relative;">                        
-                    </div>
-                </div>
+                <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb"></div>
                 
 
             </div>
