--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
         </picture>
         <div class="subscribe-popup-form">
             <div class="h3 subscribe-popup-title mb-2">不定期發布科技商業觀察</div>
-            <p>按下訂閱，不定期會收到一封電子信，分享科技動態、商業趨勢觀察。</p>
+            <p>按下訂閱，不定期會收到一封電子信，分享科技動態、商業趨勢觀察。希望能與讀者攜手，在瞬息萬變的科技洪流中，探索那些不變的核心價值。</p>
             <div class="subscribe-popup-form-sender">
                 <div class="sender-form-field" data-sender-form-id="m01zxae9epr02bhohlb"></div>
                 
