--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     <div class="siskin-newsletter-box__content inner">
 
         <div class="siskin-newsletter-box__text">
-        <p>不定期會寄送一封電子信，分享科技動態、商業趨勢觀察。</p>
+        <p>不定期會寄送一封電子信，分享科技動態、商業趨勢觀察。希望能與讀者攜手，在瞬息萬變的科技洪流中，探索那些不變的核心價值。</p>
         </div>
 
         
