--- a/index.html
+++ b/index.html
@@ -891,9 +891,9 @@
     <div class="subscribe-popup-background"></div>
     <div class="subscribe-popup-content">
         <picture>
-            <source srcset="/assets/img/yuji-newsletter-illustration-800.jpg?v=99cc610185" type="image/jpeg" />
+            <source srcset="/assets/img/newsletter.png?v=99cc610185" type="image/jpeg" />
             <img class="lazyload"
-                src="/assets/img/yuji-newsletter-illustration-800.jpg?v=99cc610185"
+                src="/assets/img/newsletter.png?v=99cc610185"
                 alt="訂閱《新增資料夾》電子報"
                 width="400"
                 data-sizes="auto" />
